# image-processor

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  bmploader.cpp  bmploader.h  filter.h  image.cpp  image.h  image_processor.cpp  rgb.cpp  rgb.h
src/cmdline/: argparsers.cpp  exceptions.cpp  exceptions.h  filteroption.h  fixedstring.h  parser.h  prettyout.h
src/filters/: bypixel.h  chain.cpp  chain.h  crop.cpp  crop.h  edgedetection.cpp  edgedetection.h  fuzzyborder.cpp  fuzzyborder.h  gaussianblur.cpp  gaussianblur.h  glow.cpp  glow.h  grayscale.cpp  grayscale.h  matrixfilter.h  negative.cpp  negative.h  oldphoto.cpp  oldphoto.h  serpia.cpp  serpia.h  sharpening.h  util.cpp  util.h  waves.cpp  waves.h
